@@ -13,12 +13,6 @@ dependencies {
     cordapp(libs.tokens.contracts)
     cordapp(libs.tokens.workflows)
 
-    testImplementation(libs.corda.solana.common)
-    testImplementation(libs.corda.test.utils)
-    testImplementation(libs.corda.core.test.utils)
-    testImplementation(libs.corda.node.driver)
-    testImplementation(libs.quasar.core)
-
     detektPlugins(libs.detekt.ktlint.wrapper)
 }
 
@@ -39,32 +33,6 @@ java {
         languageVersion.set(JavaLanguageVersion.of(17))
     }
     withSourcesJar()
-}
-
-tasks.withType<Test>().configureEach {
-    jvmArgs(
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens=java.base/java.time=ALL-UNNAMED",
-    )
-}
-
-quasar {
-    excludePackages.addAll(
-        "org.apiguardian.**",
-        "org.bouncycastle**",
-        "org.codehaus.**",
-        "org.objenesis**",
-        "org.w3c.**",
-        "org.xml**",
-        "org.yaml**",
-        "rx**",
-        "org.locationtech.**",
-        "kotlin**",
-        "org.junit.**"
-    )
 }
 
 publishing {
